--- a/style.css
+++ b/style.css
@@ -15,11 +15,11 @@
     left: 50%;
     min-width: 100%;
     min-height: 100%;
-    width: auto;
-    height: auto;
+    width: 100vw;
+    height: 100vh;
     z-index: -1;
     transform: translate(-50%, -50%);
-    background-size: cover;
+    object-fit: cover;
 }
 
 .content {
@@ -34,9 +34,29 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    text-align: center;
 }
 
 .container {
     padding: 0;
     margin: 0;
 }
+
+.trunk-item {
+    position: relative;
+}
+
+.trunk-image {
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
+    transition: transform 0.3s ease;
+}
+
+.trunk-description {
+   background-color: rgba(0, 0, 0, 0.7);
+   display: none;
+ border-radius: 10px;
+}
+
+
