--- a/style.css
+++ b/style.css
@@ -125,12 +125,18 @@
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3E%3Cpath stroke='white' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
 }
 
-.navbar-light .nav-link {
-    color: white;
-}
-
 body {
     font-family: "beelzebrush-black-bb", sans-serif;
     font-weight: 700;
     font-style: normal;
+}
+
+.navbar-light .navbar-brand, 
+.navbar-light .nav-link {
+    color: white !important; 
+}
+
+.navbar {
+    background-color: rgba(0, 0, 0, 0.6); 
+    z-index: 2;
 }
